--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -5,6 +5,9 @@
         h1 {
             color: orange;
             font-size: 65px;
+            font-family: sans-serif;
+            font-style: italic;
+            text-decoration: none;            
         }
 
         ul {
@@ -13,6 +16,25 @@
 
         .nv-class {
             background-color: wheat;
+        }
+
+        body {
+            font-size: 16px;
+            text-align: center;
+            
+        }
+        
+        p {
+            font-weight: 600;
+            font-size: 3em;
+        }
+
+        li {
+            text-align: left;
+            font-style: oblique;
+            line-height: 240%;
+            text-decoration: double;
+            text-decoration: overline;
         }
 
     </style>
@@ -25,9 +47,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="nv-class">Qual sua cor favorita?</p>
     <ul class="nv-class">
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
+        <li style="color: green;">Verde</li>
+        <li style="color: red;">Vermelho</li>
+        <li style="color: blue;">Azul</li>
     </ul>
 </body>
 </html>
