Adiciona style.css e otimiza algumas linhas

--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -1,42 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <style>
-        h1 {
-            color: orange;
-            font-size: 65px;
-            font-family: sans-serif;
-            font-style: italic;
-            text-decoration: none;            
-        }
-
-        ul {
-            background-color: aquamarine;
-        }
-
-        .nv-class {
-            background-color: wheat;
-        }
-
-        body {
-            font-size: 16px;
-            text-align: center;
-            
-        }
-        
-        p {
-            font-weight: 600;
-            font-size: 3em;
-        }
-
-        li {
-            text-align: left;
-            font-style: oblique;
-            line-height: 240%;
-            text-decoration: double;
-            text-decoration: overline;
-        }
-
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>  
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,9 +13,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="nv-class">Qual sua cor favorita?</p>
     <ul class="nv-class">
-        <li style="color: green;">Verde</li>
-        <li style="color: red;">Vermelho</li>
-        <li style="color: blue;">Azul</li>
+        <li id="verde">Verde</li>
+        <li id="vermelho">Vermelho</li>
+        <li id="azul">Azul</li>
     </ul>
 </body>
 </html>
