--- a/exercises/bloco_3/dia_4/index.html
+++ b/exercises/bloco_3/dia_4/index.html
@@ -2,9 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta lang="pt-br">
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <header>Soco a 80km/h: Conheça o Stomatopoda</header>
+      <header class="header">
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      </header>      
+      <nav>
+        <ul class="nav-top">
+          <li><a href="#">Página Inicial</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Contato</a></li> 
+        </ul>        
+      </nav>
   </body>
 </html>
