--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -5,13 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Soco a 80km/h: Conheça o Stomatopoda</title>
+    <title>Stomatopoda</title>
 </head>
 <body>
     <header>
-        <nav class="nav-links">Página Inicial</nav>
-        <nav class="nav-links">Sobre</nav>
-        <nav class="nav-links">Contato</nav>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+        <nav class="nav-links"><a href="#">Página Inicial</a></nav>
+        <nav class="nav-links"><a href="#">Sobre</a></nav>
+        <nav class="nav-links"><a href="#">Contato</a></nav>
     </header>
+    <main>
+
+        <article>
+
+            <h2>Fatos sobre o Stomatopoda</h2>
+            
+            <section class="section-1">
+
+                <h3><b>Descrição</b></h3>
+
+                <p>Stomatopoda (ou estomatópode, <i>Odontodactylus scyllarus</i>), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+
+            </section>
+
+
+        </article>
+
+    </main>
 </body>
 </html>
