--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -27,6 +27,43 @@
                 <p>Stomatopoda (ou estomatópode, <i>Odontodactylus scyllarus</i>), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
 
             </section>
+            <section class="section-2">
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Classificação Científica</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Reino</td>
+                            <td>Animalia</td>
+                        </tr>
+                        <tr>
+                            <td>Filo</td>
+                            <td>Arthropoda</td>
+                        </tr>
+                        <tr>
+                            <td>Subfilo</td>
+                            <td>Crustacea</td>
+                        </tr>
+                        <tr>
+                            <td>Classe</td>
+                            <td>Malacostraca</td>
+                        </tr>
+                        <tr>
+                            <td>Subclasse</td>
+                            <td>Hoplocarida</td>
+                        </tr>
+                        <tr>
+                            <td>Ordem</td>
+                            <td>Stomatopoda, Latreille, 1817</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </section>
 
 
         </article>
