add section3, visao

--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -30,10 +30,7 @@
             <section class="section-2">
 
                 <table>
-                    <thead>
-                        <tr>
-                            <th>Classificação Científica</th>
-                        </tr>
+                    <caption><b>Classificação Científica</b></caption>
                     </thead>
                     <tbody>
                         <tr>
@@ -62,6 +59,21 @@
                         </tr>
                     </tbody>
                 </table>
+
+            </section>
+
+            <section class="section-3">
+
+                <h3><b>Visão</b></h3>
+                <p>Estomatopodes têm a visão mais complexa no reino animal, excedendo até a das borboletas. O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores, os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies podem até ajustar a sensibilidade de sua visão de cores.</p>
+
+                <figure>
+                    <img src="https://figgysfoodtruck.com/img/mantis-shrimp-facts.jpg" alt="Stomatopoda">
+                    <figcaption>Stomatopoda, <i>Odontodactylus scyllarus</i></figcaption>
+                </figure>
+                <p>Olhos de camarão Mantis camarão (Odontodactylus scyllarus). Sirachai Arunrugstichai / Getty Images
+                O conjunto de fotorreceptores, chamados ommatídios, são organizados em linhas paralelas em três regiões. Isso dá a cada percepção da profundidade dos olhos e visão trinocular. Os camarões Mantis podem perceber comprimentos de onda do ultravioleta profundo através do espectro visível e até o vermelho distante. Eles também podem ver luz polarizada. Algumas espécies podem perceber a luz polarizada circularmente - uma habilidade não encontrada em nenhuma outra espécie animal. Sua visão excepcional dá ao camarão mantis uma vantagem de sobrevivência em um ambiente que pode variar de brilhante a escuro e permite que eles vejam e medam a distância a objetos brilhantes ou translúcidos.</p>
+
 
             </section>
 
