--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -74,6 +74,17 @@
                 <p>Olhos de camarão Mantis camarão (Odontodactylus scyllarus). Sirachai Arunrugstichai / Getty Images
                 O conjunto de fotorreceptores, chamados ommatídios, são organizados em linhas paralelas em três regiões. Isso dá a cada percepção da profundidade dos olhos e visão trinocular. Os camarões Mantis podem perceber comprimentos de onda do ultravioleta profundo através do espectro visível e até o vermelho distante. Eles também podem ver luz polarizada. Algumas espécies podem perceber a luz polarizada circularmente - uma habilidade não encontrada em nenhuma outra espécie animal. Sua visão excepcional dá ao camarão mantis uma vantagem de sobrevivência em um ambiente que pode variar de brilhante a escuro e permite que eles vejam e medam a distância a objetos brilhantes ou translúcidos.</p>
 
+            </section>
+            <section class="section-4">
+
+                <h3>Distribuição</h3>
+                <p>O camarão mantis vive em águas tropicais e subtropicais em todo o mundo. A maioria das espécies vive nos oceanos indiano e pacífico. Algumas espécies vivem em ambientes marinhos temperados. Estomatopodes constroem suas tocas em águas rasas, incluindo recifes, canais e pântanos.</p>
+
+            </section>
+            <section class="section-5">
+
+                <h3>Comportamento</h3>
+                <p>Camarões Mantis são altamente inteligentes. Reconhecem e lembram-se de outras pessoas pela visão e pelo cheiro, e demonstram capacidade de aprender. Os animais têm um comportamento social complexo, que inclui brigas ritualizadas e atividades coordenadas entre membros de um par monogâmico. Eles usam padrões fluorescentes para sinalizar entre si e possivelmente outras espécies.</p>
 
             </section>
 
