--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -87,6 +87,17 @@
                 <p>Camarões Mantis são altamente inteligentes. Reconhecem e lembram-se de outras pessoas pela visão e pelo cheiro, e demonstram capacidade de aprender. Os animais têm um comportamento social complexo, que inclui brigas ritualizadas e atividades coordenadas entre membros de um par monogâmico. Eles usam padrões fluorescentes para sinalizar entre si e possivelmente outras espécies.</p>
 
             </section>
+            <section class="section-6">
+
+                <h3><b>Reprodução e Ciclo de Vida</b></h3>
+                <p>Em média, um camarão mantis vive 20 anos. Durante sua vida útil, pode produzir de 20 a 30 vezes. Em algumas espécies, a única interação entre machos e fêmeas ocorre durante o acasalamento. A fêmea põe ovos em sua toca ou os carrega consigo. Em outras espécies, os camarões acasalam em relacionamentos monogâmicos e ao longo da vida, com ambos os sexos cuidando dos ovos. Após a eclosão, os filhotes passam três meses como zooplâncton antes de se transformarem na forma adulta.</p>
+
+                <figure>                    
+                    <img src="https://figgysfoodtruck.com/img/mantis-shrimp-facts-2.jpg" alt="ninhada de camarão mantis (stomatopoda)">
+                    <figcaption>Um camarão de mantis do pavão que leva sua fita do ovo, Anilao, Filipinas. Brook Peterson / Imagens da Stocktrek / Imagens da Getty</figcaption>
+                </figure>
+
+            </section>
 
 
         </article>
