add section 7 (dieta), 8 (predadores) e 9 (conservaçao)

--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -98,6 +98,26 @@
                 </figure>
 
             </section>
+            <section class="section-7">
+
+                <h3><b>Dieta e Caça</b></h3>
+                <p>Na maioria das vezes, o camarão mantis é um caçador solitário e recluso. Algumas espécies perseguem ativamente as presas, enquanto outras esperam dentro do covil. O animal mata desdobrando rapidamente suas garras de raptor com uma aceleração impressionante de 102.000 m / s2 e velocidade de 23 mps (51 mph). O ataque é tão rápido que ferve a água entre o camarão e sua presa, produzindo bolhas de cavitação. Quando as bolhas colapsam, a onda de choque resultante atinge as presas com uma força instantânea de 1500 newtons. Portanto, mesmo que o camarão erre seu alvo, a onda de choque pode atordoá-lo ou matá-lo. A bolha em colapso também produz luz fraca, conhecida como sonoluminescência. Presas típicas incluem peixes, caracóis, caranguejos, ostras e outros moluscos. Os camarões Mantis também comem membros de sua própria espécie.</p>
+
+            </section>
+            <section class="section-8">
+
+                <h3><b>Predadores</b></h3>
+                <p>Como zooplâncton, o camarão mantis recém-eclodido e juvenil é comido por uma variedade de animais, incluindo água-viva, peixe e baleia. Quando adultos, os estomatoópodes têm poucos predadores.
+                Várias espécies de camarão mantis são comidas como frutos do mar. Sua carne é mais saborosa à lagosta do que ao camarão. Em muitos lugares, comê-los acarreta os riscos usuais associados ao consumo de frutos do mar de águas contaminadas.</p>
+
+            </section>
+            <section class="section-9">
+
+                <h3><b>Estado de Conservação</b></h3>
+                <p>Mais de 500 espécies de camarões mantis foram descritas, mas relativamente pouco se sabe sobre as criaturas porque elas passam a maior parte do tempo em suas tocas. Seu status populacional é desconhecido e seu status de conservação não foi avaliado.
+                Algumas espécies são mantidas em aquários. Às vezes, eles são habitantes indesejáveis ​​do aquário, pois comem outras espécies e podem quebrar o vidro com suas garras. Caso contrário, eles são valorizados por suas cores brilhantes, inteligência e capacidade de criar novos buracos na rocha viva.</p>
+
+            </section>
 
 
         </article>
