add section 10, fontes

--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -118,7 +118,17 @@
                 Algumas espécies são mantidas em aquários. Às vezes, eles são habitantes indesejáveis ​​do aquário, pois comem outras espécies e podem quebrar o vidro com suas garras. Caso contrário, eles são valorizados por suas cores brilhantes, inteligência e capacidade de criar novos buracos na rocha viva.</p>
 
             </section>
+            <section class="section-10">
 
+                <h3>Fontes</h3>
+                <ul>
+                    <li>Chiou, Tsyr-Huei et al. (2008) Visão de polarização circular em um crustáceo estomatopodiano. Biologia Atual, Vol 18, Edição 6, pp. 429-434. doi: 10.1016 / j.cub.2008.02.066</li>
+                    <li>Corwin, Thomas W. (2001). "Adaptação sensorial: visão de cores ajustável em um camarão mantis". Natureza. 411 (6837): 547-8. doi: 10.1038 / 35079184</li>
+                    <li>Patek, S.N .; Korff, W.L .; Caldwell, RL. (2004). "Mecanismo de ataque mortal de um camarão mantis". Natureza. 428 (6985): 819-820. doi: 10.1038 / 428819a</li>
+                    <li>Piper, Ross (2007). Animais extraordinários: uma enciclopédia de animais curiosos e incomuns. Greenwood Press. ISBN 0-313-33922-8.</li>
+                </ul>
+
+            </section>
 
         </article>
 
