add footer e aside tag

--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -129,8 +129,14 @@
                 </ul>
 
             </section>
-
         </article>
+        <aside class="aside">
+            <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD"><p>Veja o Camarão Mantis em Ação!</a></p>
+        </aside>
+        
+        <footer>
+            <p>"Conteúdo compilado por Artur Álvaro, 2021".</p>
+        </footer>
 
     </main>
 </body>
