--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -22,15 +22,15 @@
             
             <section class="section-1">
 
-                <h3><b>Descrição</b></h3>
+                <h3><strong>Descrição</strong></h3>
 
-                <p>Stomatopoda (ou estomatópode, <i>Odontodactylus scyllarus</i>), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
+                <p>Stomatopoda (ou estomatópode, <em>Odontodactylus scyllarus</em>), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
 
             </section>
             <section class="section-2">
 
                 <table>
-                    <caption><b>Classificação Científica</b></caption>
+                    <p><strong>Classificação Científica</strong></p>
                     </thead>
                     <tbody>
                         <tr>
@@ -63,32 +63,32 @@
             </section>
             <section class="section-3">
 
-                <h3><b>Visão</b></h3>
-                <p>Estomatopodes têm a <b>visão mais complexa no reino animal</b>, excedendo até a das borboletas. O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores, os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies podem até ajustar a sensibilidade de sua visão de cores.</p>
+                <h3><strong>Visão</strong></h3>
+                <p>Estomatopodes têm a <strong>visão mais complexa no reino animal</strong>, excedendo até a das borboletas. O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores, os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies podem até ajustar a sensibilidade de sua visão de cores.</p>
 
                 <figure>
                     <img src="https://figgysfoodtruck.com/img/mantis-shrimp-facts.jpg" alt="Stomatopoda">
-                    <figcaption>Stomatopoda, <i>Odontodactylus scyllarus</i></figcaption>
+                    <figcaption>Stomatopoda, <em>Odontodactylus scyllarus</em></figcaption>
                 </figure>
-                <p>O conjunto de fotorreceptores, chamados ommatídios, são organizados em linhas paralelas em três regiões. <b>Isso dá a cada percepção da profundidade dos olhos e visão trinocular</b>. Os camarões Mantis podem perceber comprimentos de onda do ultravioleta profundo através do espectro visível e até o vermelho distante. Eles também podem ver luz polarizada. Algumas espécies podem perceber a luz polarizada circularmente - uma habilidade não encontrada em nenhuma outra espécie animal. Sua visão excepcional dá ao camarão mantis uma vantagem de sobrevivência em um ambiente que pode variar de brilhante a escuro e permite que eles vejam e medam a distância a objetos brilhantes ou translúcidos.</p>
+                <p>O conjunto de fotorreceptores, chamados ommatídios, são organizados em linhas paralelas em três regiões. <strong>Isso dá a cada percepção da profundidade dos olhos e visão trinocular</strong>. Os camarões Mantis podem perceber comprimentos de onda do ultravioleta profundo através do espectro visível e até o vermelho distante. Eles também podem ver luz polarizada. Algumas espécies podem perceber a luz polarizada circularmente - uma habilidade não encontrada em nenhuma outra espécie animal. Sua visão excepcional dá ao camarão mantis uma vantagem de sobrevivência em um ambiente que pode variar de brilhante a escuro e permite que eles vejam e medam a distância a objetos brilhantes ou translúcidos.</p>
 
             </section>
             <section class="section-4">
 
                 <h3>Distribuição</h3>
-                <p>O camarão mantis vive em águas tropicais e subtropicais em todo o mundo. A maioria das espécies vive nos oceanos indiano e pacífico. Algumas espécies vivem em ambientes marinhos temperados. <b>Estomatopodes constroem suas tocas em águas rasas, incluindo recifes, canais e pântanos</b>.</p>
+                <p>O camarão mantis vive em águas tropicais e subtropicais em todo o mundo. A maioria das espécies vive nos oceanos indiano e pacífico. Algumas espécies vivem em ambientes marinhos temperados. <strong>Estomatopodes constroem suas tocas em águas rasas, incluindo recifes, canais e pântanos</strong>.</p>
 
             </section>
             <section class="section-5">
 
                 <h3>Comportamento</h3>
-                <p><b>Camarões Mantis são altamente inteligentes</b>. Reconhecem e lembram-se de outras pessoas pela visão e pelo cheiro, e demonstram capacidade de aprender. Os animais têm um comportamento social complexo, que inclui brigas ritualizadas e atividades coordenadas entre membros de um par monogâmico. Eles usam padrões fluorescentes para sinalizar entre si e possivelmente outras espécies.</p>
+                <p><strong>Camarões Mantis são altamente inteligentes</strong>. Reconhecem e lembram-se de outras pessoas pela visão e pelo cheiro, e demonstram capacidade de aprender. Os animais têm um comportamento social complexo, que inclui brigas ritualizadas e atividades coordenadas entre membros de um par monogâmico. Eles usam padrões fluorescentes para sinalizar entre si e possivelmente outras espécies.</p>
 
             </section>
             <section class="section-6">
 
-                <h3><b>Reprodução e Ciclo de Vida</b></h3>
-                <p>Em média, um camarão mantis vive 20 anos. <b>Durante sua vida útil, pode produzir de 20 a 30 vezes</b>. Em algumas espécies, a única interação entre machos e fêmeas ocorre durante o acasalamento. A fêmea põe ovos em sua toca ou os carrega consigo. Em outras espécies, os camarões acasalam em relacionamentos monogâmicos e ao longo da vida, com ambos os sexos cuidando dos ovos. Após a eclosão, os filhotes passam três meses como zooplâncton antes de se transformarem na forma adulta.</p>
+                <h3><strong>Reprodução e Ciclo de Vida</strong></h3>
+                <p>Em média, um camarão mantis vive 20 anos. <strong>Durante sua vida útil, pode produzir de 20 a 30 vezes</strong>. Em algumas espécies, a única interação entre machos e fêmeas ocorre durante o acasalamento. A fêmea põe ovos em sua toca ou os carrega consigo. Em outras espécies, os camarões acasalam em relacionamentos monogâmicos e ao longo da vida, com ambos os sexos cuidando dos ovos. Após a eclosão, os filhotes passam três meses como zooplâncton antes de se transformarem na forma adulta.</p>
 
                 <figure>                    
                     <img src="https://figgysfoodtruck.com/img/mantis-shrimp-facts-2.jpg" alt="ninhada de camarão mantis (stomatopoda)">
@@ -98,40 +98,40 @@
             </section>
             <section class="section-7">
 
-                <h3><b>Dieta e Caça</b></h3>
-                <p>Na maioria das vezes, o camarão mantis é um caçador solitário e recluso. <b>Algumas espécies perseguem ativamente as presas, enquanto outras esperam dentro do covil</b>. O animal mata desdobrando rapidamente suas garras de raptor com uma aceleração impressionante de 102.000 m / s2 e velocidade de 23 mps (51 mph). O ataque é tão rápido que ferve a água entre o camarão e sua presa, produzindo bolhas de cavitação. Quando as bolhas colapsam, a onda de choque resultante atinge as presas com uma força instantânea de 1500 newtons. Portanto, mesmo que o camarão erre seu alvo, a onda de choque pode atordoá-lo ou matá-lo. A bolha em colapso também produz luz fraca, conhecida como sonoluminescência. Presas típicas incluem peixes, caracóis, caranguejos, ostras e outros moluscos. Os camarões Mantis também comem membros de sua própria espécie.</p>
+                <h3><strong>Dieta e Caça</strong></h3>
+                <p>Na maioria das vezes, o camarão mantis é um caçador solitário e recluso. <strong>Algumas espécies perseguem ativamente as presas, enquanto outras esperam dentro do covil</strong>. O animal mata desdobrando rapidamente suas garras de raptor com uma aceleração impressionante de 102.000 m / s2 e velocidade de 23 mps (51 mph). O ataque é tão rápido que ferve a água entre o camarão e sua presa, produzindo bolhas de cavitação. Quando as bolhas colapsam, a onda de choque resultante atinge as presas com uma força instantânea de 1500 newtons. Portanto, mesmo que o camarão erre seu alvo, a onda de choque pode atordoá-lo ou matá-lo. A bolha em colapso também produz luz fraca, conhecida como sonoluminescência. Presas típicas incluem peixes, caracóis, caranguejos, ostras e outros moluscos. Os camarões Mantis também comem membros de sua própria espécie.</p>
 
             </section>
             <section class="section-8">
 
-                <h3><b>Predadores</b></h3>
-                <p>Como zooplâncton, o camarão mantis recém-eclodido e juvenil é comido por uma variedade de animais, incluindo água-viva, peixe e baleia. <b>Quando adultos, os estomatoópodes têm poucos predadores</b>.
+                <h3><strong>Predadores</strong></h3>
+                <p>Como zooplâncton, o camarão mantis recém-eclodido e juvenil é comido por uma variedade de animais, incluindo água-viva, peixe e baleia. <strong>Quando adultos, os estomatoópodes têm poucos predadores</strong>.
                 Várias espécies de camarão mantis são comidas como frutos do mar. Sua carne é mais saborosa à lagosta do que ao camarão. Em muitos lugares, comê-los acarreta os riscos usuais associados ao consumo de frutos do mar de águas contaminadas.</p>
 
             </section>
             <section class="section-9">
 
-                <h3><b>Estado de Conservação</b></h3>
+                <h3><strong>Estado de Conservação</strong></h3>
                 <p>Mais de 500 espécies de camarões mantis foram descritas, mas relativamente pouco se sabe sobre as criaturas porque elas passam a maior parte do tempo em suas tocas. Seu status populacional é desconhecido e seu status de conservação não foi avaliado.
-                Algumas espécies são mantidas em aquários. <b>Às vezes, eles são habitantes indesejáveis ​​do aquário, pois comem outras espécies e podem quebrar o vidro com suas garras</b>. Caso contrário, eles são valorizados por suas cores brilhantes, inteligência e capacidade de criar novos buracos na rocha viva.</p>
+                Algumas espécies são mantidas em aquários. <strong>Às vezes, eles são habitantes indesejáveis ​​do aquário, pois comem outras espécies e podem quebrar o vidro com suas garras</strong>. Caso contrário, eles são valorizados por suas cores brilhantes, inteligência e capacidade de criar novos buracos na rocha viva.</p>
 
             </section>
             <section class="section-10">
 
-                <h3>Fontes</h3>
+                <h3><strong>Fontes</strong></h3>
                 <ul>
-                    <li><b>Chiou, Tsyr-Huei et al. (2008) Visão de polarização circular em um crustáceo estomatopodiano. Biologia Atual</b>, Vol 18, Edição 6, pp. 429-434. doi: 10.1016 / j.cub.2008.02.066</li>
-                    <li><b>Corwin, Thomas W. (2001). "Adaptação sensorial: visão de cores ajustável em um camarão mantis". Natureza</b>. 411 (6837): 547-8. doi: 10.1038 / 35079184</li>
-                    <li><b>Patek, S.N .; Korff, W.L .; Caldwell, RL. (2004). "Mecanismo de ataque mortal de um camarão mantis"</b>. Natureza. 428 (6985): 819-820. doi: 10.1038 / 428819a</li>
-                    <li><b>Piper, Ross (2007). Animais extraordinários: uma enciclopédia de animais curiosos e incomuns. Greenwood Press</b>. ISBN 0-313-33922-8.</li>
-                    <li><b>Fatos Sobre Camarão Mantis (Stomatopoda)</b>: https://mz.figgysfoodtruck.com/2076-mantis-shrimp-facts-stomatopoda.html</li>
-                    <li><b>Stomatopoda</b>: https://pt.wikipedia.org/wiki/Stomatopoda</li>
+                    <li><strong>Chiou, Tsyr-Huei et al. (2008) Visão de polarização circular em um crustáceo estomatopodiano. Biologia Atual</strong>, Vol 18, Edição 6, pp. 429-434. doi: 10.1016 / j.cub.2008.02.066</li>
+                    <li><strong>Corwin, Thomas W. (2001). "Adaptação sensorial: visão de cores ajustável em um camarão mantis". Natureza</strong>. 411 (6837): 547-8. doi: 10.1038 / 35079184</li>
+                    <li><strong>Patek, S.N .; Korff, W.L .; Caldwell, RL. (2004). "Mecanismo de ataque mortal de um camarão mantis"</strong>. Natureza. 428 (6985): 819-820. doi: 10.1038 / 428819a</li>
+                    <li><strong>Piper, Ross (2007). Animais extraordinários: uma enciclopédia de animais curiosos e incomuns. Greenwood Press</strong>. ISBN 0-313-33922-8.</li>
+                    <li><strong>Fatos Sobre Camarão Mantis (Stomatopoda)</strong>: https://mz.figgysfoodtruck.com/2076-mantis-shrimp-facts-stomatopoda.html</li>
+                    <li><strong>Stomatopoda</strong>: https://pt.wikipedia.org/wiki/Stomatopoda</li>
                 </ul>
 
             </section>
         </article>
         <aside class="aside">
-            <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD"><p>Veja o Camarão Mantis em Ação!</a></p>
+             <p><a href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD"><p>Veja o Camarão Mantis em Ação!</p></a>
         </aside>
         
         <footer>
