--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +10,13 @@
 <body>
     <header>
         <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
-        <nav class="nav-links"><a href="#">Página Inicial</a></nav>
-        <nav class="nav-links"><a href="#">Sobre</a></nav>
-        <nav class="nav-links"><a href="#">Contato</a></nav>
+        <nav>
+            <ul class="nav_menu">
+                <li class="nav-links nav1"><a href="#">Página Inicial</a></li>
+                <li class="nav-links nav2"><a href="#">Sobre</a></li>
+                <li class="nav-links nav3"><a href="#">Contato</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
