--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -34,7 +34,7 @@
             <section class="section-2">
 
                 <table>
-                    <p><strong>Classificação Científica</strong></p>
+                    <p class="table-title"><strong>Classificação Científica</strong></p>
                     </thead>
                     <tbody>
                         <tr>
