estiliza table e outras sections

--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -34,7 +34,8 @@
             <section class="section-2">
 
                 <table>
-                    <p class="table-title"><strong>Classificação Científica</strong></p>
+                    <thead>
+                    <caption class="table-title"><strong>Classificação Científica</strong></caption>
                     </thead>
                     <tbody>
                         <tr>
@@ -63,18 +64,20 @@
                         </tr>
                     </tbody>
                 </table>
+                <section class="section-3">
 
-            </section>
-            <section class="section-3">
+                    <h3><strong>Visão</strong></h3>
+                    <p>Estomatopodes têm a <strong>visão mais complexa no reino animal</strong>, excedendo até a das borboletas. O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores, os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies podem até ajustar a sensibilidade de sua visão de cores.</p>
 
-                <h3><strong>Visão</strong></h3>
-                <p>Estomatopodes têm a <strong>visão mais complexa no reino animal</strong>, excedendo até a das borboletas. O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores, os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies podem até ajustar a sensibilidade de sua visão de cores.</p>
-
-                <figure>
-                    <img src="https://figgysfoodtruck.com/img/mantis-shrimp-facts.jpg" alt="Stomatopoda">
-                    <figcaption>Stomatopoda, <em>Odontodactylus scyllarus</em></figcaption>
-                </figure>
-                <p>O conjunto de fotorreceptores, chamados ommatídios, são organizados em linhas paralelas em três regiões. <strong>Isso dá a cada percepção da profundidade dos olhos e visão trinocular</strong>. Os camarões Mantis podem perceber comprimentos de onda do ultravioleta profundo através do espectro visível e até o vermelho distante. Eles também podem ver luz polarizada. Algumas espécies podem perceber a luz polarizada circularmente - uma habilidade não encontrada em nenhuma outra espécie animal. Sua visão excepcional dá ao camarão mantis uma vantagem de sobrevivência em um ambiente que pode variar de brilhante a escuro e permite que eles vejam e medam a distância a objetos brilhantes ou translúcidos.</p>
+                    <section class="section-3 1">
+                        <figure>
+                            <img src="https://figgysfoodtruck.com/img/mantis-shrimp-facts.jpg" alt="Stomatopoda">
+                            <figcaption>Stomatopoda, <em>Odontodactylus scyllarus</em></figcaption>
+                        </figure>
+                        <p>O conjunto de fotorreceptores, chamados ommatídios, são organizados em linhas paralelas em três regiões. <strong>Isso dá a cada percepção da profundidade dos olhos e visão trinocular</strong>. Os camarões Mantis podem perceber comprimentos de onda do ultravioleta profundo através do espectro visível e até o vermelho distante. Eles também podem ver luz polarizada. Algumas espécies podem perceber a luz polarizada circularmente - uma habilidade não encontrada em nenhuma outra espécie animal. Sua visão excepcional dá ao camarão mantis uma vantagem de sobrevivência em um ambiente que pode variar de brilhante a escuro e permite que eles vejam e medam a distância a objetos brilhantes ou translúcidos.</p>
+                    </section>
+    
+                </section>
 
             </section>
             <section class="section-4">
