--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/index.html
@@ -127,12 +127,11 @@
 
                 <h3><strong>Fontes</strong></h3>
                 <ul>
-                    <li><strong>Chiou, Tsyr-Huei et al. (2008) Visão de polarização circular em um crustáceo estomatopodiano. Biologia Atual</strong>, Vol 18, Edição 6, pp. 429-434. doi: 10.1016 / j.cub.2008.02.066</li>
-                    <li><strong>Corwin, Thomas W. (2001). "Adaptação sensorial: visão de cores ajustável em um camarão mantis". Natureza</strong>. 411 (6837): 547-8. doi: 10.1038 / 35079184</li>
-                    <li><strong>Patek, S.N .; Korff, W.L .; Caldwell, RL. (2004). "Mecanismo de ataque mortal de um camarão mantis"</strong>. Natureza. 428 (6985): 819-820. doi: 10.1038 / 428819a</li>
-                    <li><strong>Piper, Ross (2007). Animais extraordinários: uma enciclopédia de animais curiosos e incomuns. Greenwood Press</strong>. ISBN 0-313-33922-8.</li>
-                    <li><strong>Fatos Sobre Camarão Mantis (Stomatopoda)</strong>: https://mz.figgysfoodtruck.com/2076-mantis-shrimp-facts-stomatopoda.html</li>
-                    <li><strong>Stomatopoda</strong>: https://pt.wikipedia.org/wiki/Stomatopoda</li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank"><strong>Stomatopoda</strong>, Wikipédia, a enciclopédia livre.</a></li>
+                    <li><a href="https://www.cell.com/current-biology/fulltext/S0960-9822%2808%2900252-2?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS0960982208002522%3Fshowall%3Dtrue" target="_blank"><strong>Chiou, Tsyr-Huei et al. (2008) Visão de polarização circular em um crustáceo estomatopodiano. Biologia Atual</strong></a>, Vol 18, Edição 6, pp. 429-434. doi: 10.1016 / j.cub.2008.02.066</li>
+                    <li><a href="https://www.nature.com/articles/35079184" target="_blank"><strong>Corwin, Thomas W. (2001). "Adaptação sensorial: visão de cores ajustável em um camarão mantis". Nature</a></strong>. 411 (6837): 547-8. doi: 10.1038 / 35079184</li>
+                    <li><a href="https://www.nature.com/articles/428819a" target="_blank"><strong>Patek, S.N .; Korff, W.L .; Caldwell, RL. (2004). "Mecanismo de ataque mortal de um camarão mantis"</a></strong>. Nature. 428 (6985): 819-820. doi: 10.1038 / 428819a</li>
+                    <li><strong>Piper, Ross (2007)</strong>. Extraordinary Animals: An Encyclopedia of Curious and Unusual Animals . Greenwood Press. ISBN 0-313-33922-8.</li>
                 </ul>
 
             </section>
