ex 3 bloco 5 dia 2

--- a/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
+++ b/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
@@ -67,7 +67,10 @@
         divMainCont.className = 'main-content';
         document.body.appendChild(divMainCont);
 
-        
+        // 3 add tag div com class center-content como filho da tag div criada no passo 2
+        let divCentCont = document.createElement('div');
+        divCentCont.className = 'center-content';
+        divMainCont.appendChild(divCentCont);
 
 
     </script>
