--- a/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
+++ b/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
@@ -72,6 +72,11 @@
         divCentCont.className = 'center-content';
         divMainCont.appendChild(divCentCont);
 
+        // 4 add tag p como filho da div criada no passo 3 e coloque algum texto
+        let paragraph = document.createElement('p');
+        paragraph.innerHTML = 'Mussum Ipsum, cacilds vidis litro abertis. Quem num gosta di mé, boa gentis num é. In elementis mé pra quem é amistosis quis leo. Aenean aliquam molestie leo, vitae iaculis nisl.';
+        divCentCont.appendChild(paragraph);
+
 
     </script>
   </body>
