--- a/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
+++ b/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
@@ -77,6 +77,11 @@
         paragraph.innerHTML = 'Mussum Ipsum, cacilds vidis litro abertis. Quem num gosta di mé, boa gentis num é. In elementis mé pra quem é amistosis quis leo. Aenean aliquam molestie leo, vitae iaculis nisl.';
         divCentCont.appendChild(paragraph);
 
+        // 5 add tag div com classe left-content como filho da tag div criada no passo 2
+        divLeftCont = document.createElement('div');
+        divLeftCont.className = 'left-content';
+        divMainCont.appendChild(divLeftCont);
+
 
     </script>
   </body>
