--- a/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
+++ b/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
@@ -78,9 +78,14 @@
         divCentCont.appendChild(paragraph);
 
         // 5 add tag div com classe left-content como filho da tag div criada no passo 2
-        divLeftCont = document.createElement('div');
+        let divLeftCont = document.createElement('div');
         divLeftCont.className = 'left-content';
         divMainCont.appendChild(divLeftCont);
+
+        // 6 add tag div com classe right-content como filho da tag div criada no passo 2
+        let divRightCont = document.createElement('div');
+        divRightCont.className = 'right-content';
+        divMainCont.appendChild(divRightCont);
 
 
     </script>
