--- a/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
+++ b/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
@@ -87,6 +87,14 @@
         divRightCont.className = 'right-content';
         divMainCont.appendChild(divRightCont);
 
+        // 7 add img como src configurado com o valor: https://picsum.photos/200 e classe small-image. Dever ser filho do div criado no passo 5
+        let imgSrc = document.createElement('img');
+        imgSrc.className = 'small-image';
+        imgSrc.src = 'https://picsum.photos/200'
+        divLeftCont.appendChild(imgSrc);
+
+        
+
 
     </script>
   </body>
