--- a/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
+++ b/exercises/bloco_5/dia_2/conteudoAulaPt2/exercises/index.html
@@ -105,8 +105,15 @@
 
             listNonOrder.appendChild(ListOfItems);
         }        
-        divRightCont.appendChild(listNonOrder)
+        divRightCont.appendChild(listNonOrder);
 
+        // 9 add 3 tags h3, todas filhas de divMainCont
+        tagH3A = document.createElement('h3');
+        tagH3B = document.createElement('h3');
+        tagH3C = document.createElement('h3');
+        divMainCont.appendChild(tagH3A);
+        divMainCont.appendChild(tagH3B);
+        divMainCont.appendChild(tagH3C);
 
     </script>
   </body>
